Bug 781291 - [Developer Toolbar] Web Console error count is too close to the label (linux). r=paul
UltraBlame original commit: c6ce84a6c4d0c55711e1822ab3505355bf02bc47

--- a/browser/themes/gnomestripe/browser.css
+++ b/browser/themes/gnomestripe/browser.css
@@ -1373,8 +1373,15 @@ richlistitem[type~="action"][actiontype="switchtab"] > .ac-url-box > .ac-action-
 
 
 #share-button {
-  width: 16px;
-  height: 16px;
+  list-style-image: url(chrome://browser/skin/share-button.png);
+}
+
+#share-button:not([shared]):not([disabled]):hover {
+  list-style-image: url(chrome://browser/skin/share-button-active.png);
+}
+
+#share-button[shared] {
+  list-style-image: url(chrome://browser/skin/share-button-shared.png);
 }
 
 #socialUserPortrait {
@@ -2602,6 +2609,7 @@ stack[anonid=browserStack][responsivemode] {
   text-shadow: none;
   background-image: -moz-linear-gradient(top, #B4211B, #8A1915);
   border-radius: 1px;
+  -moz-margin-end: 2px;
 }
 
 #social-toolbar-button {
@@ -2806,6 +2814,7 @@ stack[anonid=browserStack][responsivemode] {
   box-shadow: inset 0 2px 5px rgba(0,0,0,0.6), 0 1px rgba(255,255,255,0.2);
 }
 
+
 .chatbar-button > .toolbarbutton-text,
 .chatbar-button > .toolbarbutton-menu-dropmarker {
   display: none;
@@ -2813,24 +2822,24 @@ stack[anonid=browserStack][responsivemode] {
 
 .chatbar-innerbox {
   background: transparent;
-  margin: -285px -1px 0 -1px;
+  margin: -200px -1px 0 -1px;
   overflow: hidden;
 }
 
-chatbar {
-  -moz-margin-end: 20px;
-}
-
-chatbox {
-  height: 285px;
-  width: 260px;
-  -moz-margin-start: 4px;
+chatbar > chatbox {
+  height: 200px;
+  width: 200px;
   background-color: white;
   border: 1px solid gray;
   border-bottom: none;
 }
 
-chatbox[minimized="true"] {
-  width: 160px;
+chatbar > chatbox[minimized="true"] {
+  width: 100px;
   height: 20px;
+  border-bottom: none;
+}
+
+chatbar > chatbox + chatbox {
+  -moz-margin-start: -1px;
 }
